@@ -218,6 +218,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_display.html#set_caption>pygame.display.set_caption</a> - changes the title of the window<br>
 <a href=ref/pygame_display.html#set_gamma>pygame.display.set_gamma</a> - change the brightness of the display<br>
 <a href=ref/pygame_display.html#set_mode>pygame.display.set_mode</a> - set the display mode<br>
+<a href=ref/pygame_display.html#set_palette>pygame.display.set_palette</a> - set the palette<br>
 <a href=ref/pygame_display.html#toggle_fullscreen>pygame.display.toggle_fullscreen</a> - switch the display fullscreen mode<br>
 <a href=ref/pygame_display.html#update>pygame.display.update</a> - update an area of the display<br>
 <a href=ref/pygame_draw.html#line>pygame.draw.line</a> - draw a line on a surface<br>
